# aisd2021

1/: CMakeLists.txt  README.md  io.c  io.h  main.c  matrix.c  matrix.h
2a/: README.md  calculate.h  io.c  io.h  queue.h
2b/: CMakeLists.txt  calculate.c  main.c  queue_cycle.c  queue_vector.c
3a/: .directory  README.md
3a/src/: dialog.c  dialog.h  main.c  table.c  table.h  table_hash.c  table_viewed.c
3a/tests/: test1.in
3b/: .gitignore
3b/src/: CMakeLists.txt  dialog.c  io.c  main.c  table.c  table.h  table_hash.c  table_viewed.c
3b/tests/: test1.in  test2.in
4a/: graph.dot
4a/src/: CMakeLists.txt  dialog.c  dialog.h  io.h  tree.c  tree.h
4a/tests/: test1.in
4b/src/: tree.h
5/src/: CMakeLists.txt  dialog.c  dialog.h  graph.c  graph.h  io.c  io.h  main.c  priority_queue.c  priority_queue.h  queue.h  queue_cycle.c
5/tests/: test1.in
6/src/: dialog.c  dialog.h  main.c  tree.c
6/tests/: test1.in  test2.in
